force-app/main/default/objects/DD_Product_Bundle__c/DD_Product_Bundle__c.object-meta.xml
<CustomObject>
    <description>Dual Choice and Core/Buy-Up plan combinations</description>
    <label>Product Bundle</label>
    <nameField><displayFormat>BND-{00000}</displayFormat><label>Bundle ID</label><type>AutoNumber</type></nameField>
    <pluralLabel>Product Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>