force-app/main/default/objects/DD_Product_Bundle__c/fields/Bundle_Name__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Name__c</fullName>
    <label>Bundle Name</label>
    <type>Text</type>
    <length>100</length><required>true</required><unique>false</unique><externalId>false</externalId>
    <description>e.g. Dual Choice 2: Matching Premiums</description>
</CustomField>