force-app/main/default/objects/DD_Product_Bundle__c/fields/Bundle_Type__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Type__c</fullName>
    <label>Bundle Type</label>
    <type>Picklist</type>
    <required>true</required><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Dual Choice 1</fullName><default>false</default><label>Dual Choice 1</label></value><value><fullName>Dual Choice 2</fullName><default>false</default><label>Dual Choice 2</label></value><value><fullName>Dual Choice 3</fullName><default>false</default><label>Dual Choice 3</label></value><value><fullName>Dual Choice 4</fullName><default>false</default><label>Dual Choice 4</label></value><value><fullName>Core Buy-Up</fullName><default>false</default><label>Core Buy-Up</label></value></valueSetDefinition></valueSet>
    <description>Type of bundle</description>
</CustomField>