force-app/main/default/objects/DD_Product_Bundle__c/fields/Contribution_Must_Match__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Must_Match__c</fullName>
    <label>Contribution Must Match</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Employer contribution % must be identical</description>
</CustomField>