force-app/main/default/objects/DD_Product_Bundle__c/fields/High_Product__c.field-meta.xml
<CustomField>
    <fullName>High_Product__c</fullName>
    <label>High Plan</label>
    <type>Lookup</type>
    <referenceTo>DD_Product__c</referenceTo><relationshipLabel>Bundles as High</relationshipLabel><relationshipName>Bundles_High</relationshipName><required>false</required>
    <description>The richer plan in the bundle</description>
</CustomField>