force-app/main/default/objects/DD_Product_Bundle__c/fields/Low_Product__c.field-meta.xml
<CustomField>
    <fullName>Low_Product__c</fullName>
    <label>Low Plan</label>
    <type>Lookup</type>
    <referenceTo>DD_Product__c</referenceTo><relationshipLabel>Bundles as Low</relationshipLabel><relationshipName>Bundles_Low</relationshipName><required>false</required>
    <description>The leaner plan in the bundle</description>
</CustomField>