force-app/main/default/objects/DD_Product_Bundle__c/fields/Matching_Premiums__c.field-meta.xml
<CustomField>
    <fullName>Matching_Premiums__c</fullName>
    <label>Matching Premiums</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether both plans are priced the same</description>
</CustomField>