force-app/main/default/objects/DD_Product_Bundle__c/fields/Min_Group_Size__c.field-meta.xml
<CustomField>
    <fullName>Min_Group_Size__c</fullName>
    <label>Min Group Size</label>
    <type>Number</type>
    <precision>4</precision><scale>0</scale><required>false</required><unique>false</unique><externalId>false</externalId>
    <description>Minimum enrolled for this bundle</description>
</CustomField>