force-app/main/default/objects/DD_Product_Bundle__c/fields/Min_Per_Plan__c.field-meta.xml
<CustomField>
    <fullName>Min_Per_Plan__c</fullName>
    <label>Min Per Plan</label>
    <type>Number</type>
    <precision>4</precision><scale>0</scale><required>false</required><unique>false</unique><externalId>false</externalId>
    <description>Minimum enrolled per plan within bundle</description>
</CustomField>