force-app/main/default/objects/DD_Product_Bundle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <columns>Bundle_Name__c</columns>
    <columns>Bundle_Type__c</columns>
    <columns>High_Product__c</columns>
    <columns>Low_Product__c</columns>
    <columns>Min_Group_Size__c</columns>
</ListView>